# HybridRAG

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.streamlit  README.md  config.json  db_connection.py  docker-compose.yaml  ivan_test.py  langchain_utils.py  llm_utils.py  main.py  prompt.txt  pyproject.toml  requirements.txt  secrets.env
api/: deps.py  routes.py  utils.py
fastapi/: app.py
frontend/: app.py
hybridrag/: document_processor.py  document_processor_ingest.py  document_processor_langchain.py  dspy_llm_client.py  hybrid_retriever.py  instructions.txt  lexical_retriever.py  scraper.py  semantic_retriever.py
hybridrag/document_processors/: document_processor.py  document_processor_docling.py  logging_config.py
hybridrag/graph/: extract_worker.py  extraction_human_prompt.txt  extraction_system_prompt.txt  extractor.py  test_notebook.ipynb
hybridrag/graph/prompts/: dedupe_system_prompt.txt  entities_extraction_human_prompt.txt  entities_extraction_system_prompt.txt  extraction_system_prompt.txt
hybridrag/retrievers/: multihop.py  retriever_hybrid.py  retriever_lexical.py  retriever_semantic.py
hybridrag/src/document_processors/: document_processor_ingest.py  document_worker.py  scraper.py
hybridrag/src/graph/: extract_worker.py  extractor.py
hybridrag/src/scraper/: pmcquery.xml  scraper.ipynb
src/db/: config.json  db_client.py  ollama_client.py
src/db/models/: entities.py  paper.py  processed_paper.py  query.py  search_result.py
src/db/retrievers/: local_fusion.py  old_retriever_hybrid.py  retriever_hybrid.py  retriever_lexical.py  retriever_semantic.py
src/graph/: extractor.py  graph_retriever.py  test_notebook.ipynb
src/graph/prompts/: dedupe_human_prompt.txt  extraction_human_prompt.txt
testing/: check_cluster.py  cluster_request.sh  filter_relevant_papers.py  insert.py  scrape.py  test.py  test_endpoints.py  test_hybrid_retriever.py  test_local.py
