[tool.poetry]
name = "hybridrag"
version = "0.1.0"
description = "Environment for running the HybridRAG project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.0"
cloudpickle = "^3.1.0"
python-multipart = "^0.0.20"
rank-bm25 = "^0.2.2"

[tool.poetry.group.backend.dependencies]
langchain = "^0.3.1"
langchain-community = "^0.3.1"
pandas = "^2.2.3"
neo4j = "^5.25.0"
unstructured = "^0.15.13"
pypdf = "^5.0.1"
uvicorn = ">=0.22.0,<0.23.0"
fastapi = "^0.110.0"
dspy-ai = "^2.3.6"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
sentence-transformers = "^3.2.0"
qdrant-client = "^1.12.0"
ruff = "^0.7.1"
langchain-ollama = "^0.2.0"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"